--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "cars-app-next",
+	"name": "carmax",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -9,18 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.7.17",
-		"next": "14.0.3",
-		"react": "^18",
-		"react-dom": "^18"
+		"@headlessui/react": "^1.7.14",
+		"@types/node": "20.2.1",
+		"@types/react-dom": "18.2.4",
+		"autoprefixer": "10.4.14",
+		"eslint-config-next": "^14.0.3",
+		"next": "^14.0.3",
+		"postcss": "^8.4.31",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"typescript": "5.0.4"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"autoprefixer": "^10.0.1",
-		"postcss": "^8",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
+		"@types/react": "^18.2.39",
+		"tailwindcss": "^3.3.5"
 	}
 }
