--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.14",
+		"@supabase/auth-helpers-nextjs": "^0.8.7",
+		"@supabase/auth-ui-react": "^0.4.6",
+		"@supabase/auth-ui-shared": "^0.1.8",
+		"@supabase/supabase-js": "^2.39.0",
 		"@types/node": "20.2.1",
 		"@types/react-dom": "18.2.4",
 		"autoprefixer": "10.4.14",
