--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.14",
-		"@supabase/auth-helpers-nextjs": "^0.8.7",
-		"@supabase/auth-ui-react": "^0.4.6",
-		"@supabase/auth-ui-shared": "^0.1.8",
-		"@supabase/supabase-js": "^2.39.0",
 		"@types/node": "20.2.1",
 		"@types/react-dom": "18.2.4",
 		"autoprefixer": "10.4.14",
 		"eslint-config-next": "^14.0.3",
 		"next": "^14.0.3",
+		"next-auth": "^5.0.0-beta.4",
 		"postcss": "^8.4.31",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
